<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_play_all"
        android:icon="@drawable/ic_more_share"
        android:title="@string/menu_play" />
    <item
        android:id="@+id/action_play_shuffle"
        android:icon="@drawable/ic_more_share"
        android:title="@string/menu_play_shuffle" />
    <item
        android:id="@+id/action_add_to_track_list"
        android:icon="@drawable/ic_more_share"
        android:title="@string/menu_add_to_track_list" />
    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_more_share"
        android:title="@string/menu_rename" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_more_share"
        android:title="@string/menu_delete" />
</menu>