<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="@dimen/card_padding_start"
        android:layout_marginTop="@dimen/card_padding_start"
        app:layout_constraintEnd_toStartOf="@id/card2"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="18dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="18dp">

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_more_browser" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/icon1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title1"
                    android:singleLine="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_discover" />

                <TextView
                    android:id="@+id/des1"
                    android:singleLine="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_new_things" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/card_padding_start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/card_padding_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card1"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="18dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="18dp">

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_more_download" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/icon2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title2"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:text="@string/download_manger" />

                <TextView
                    android:id="@+id/des2"
                    android:singleLine="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manger_you_download" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_padding_start"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="@dimen/card_padding_start"
        android:layout_marginTop="@dimen/card_padding_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/card4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card1">

        <RelativeLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="18dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="18dp">

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_more_report" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/icon3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title3"
                    android:singleLine="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moyu" />

                <TextView

                    android:id="@+id/des3"
                    android:singleLine="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moyu_des" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_padding_start"
        android:layout_marginEnd="@dimen/card_padding_start"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/card_padding_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/card3"
        app:layout_constraintTop_toBottomOf="@id/card2">

        <RelativeLayout
            android:id="@+id/layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="18dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="18dp">

            <ImageView
                android:id="@+id/icon4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_more_save" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/icon4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title4"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:text="@string/mark" />

                <TextView
                    android:id="@+id/des4"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:layout_height="wrap_content"
                    android:text="@string/mark_des" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>