<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/avatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderImage="@mipmap/ic_launcher"
            app:placeholderImageScaleType="centerCrop"
            app:roundAsCircle="true" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="洛阳yizhihua"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/action_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/name">

            <FrameLayout
                android:id="@+id/action_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toStartOf="@+id/action_mark"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:tint="@color/warm_pink"
                    app:srcCompat="@drawable/ic_user_notification" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/action_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintLeft_toRightOf="@+id/action_notify"
                app:layout_constraintRight_toLeftOf="@+id/action_history">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:tint="@color/warm_pink"
                    app:srcCompat="@drawable/ic_user_feed" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/action_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/action_mark">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:tint="@color/warm_pink"
                    app:srcCompat="@drawable/ic_user_history" />
            </FrameLayout>

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_relation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/action_layout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="15dp"
                android:text="1000关注"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:background="@color/grey" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="15dp"
                android:text="111粉丝"
                android:textColor="@color/grey"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/layout_relation">

            <View
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/grey_light" />

            <LinearLayout style="@style/UserSettingLayout">

                <TextView
                    style="@style/UserSettingLayoutItem"
                    android:drawableStart="@drawable/ic_sidebar_setting"
                    android:text="@string/setting" />
            </LinearLayout>

            <include layout="@layout/divider_user" />

            <LinearLayout style="@style/UserSettingLayout">

                <TextView
                    style="@style/UserSettingLayoutItem"
                    android:drawableStart="@drawable/ic_sidebar_nightmode"
                    android:text="@string/night_model" />
            </LinearLayout>

            <include layout="@layout/divider_user" />

            <LinearLayout style="@style/UserSettingLayout">

                <TextView
                    style="@style/UserSettingLayoutItem"
                    android:drawableStart="@drawable/ic_siderbar_gifts"
                    android:text="@string/gifts_center" />
            </LinearLayout>

            <include layout="@layout/divider_user" />

            <LinearLayout style="@style/UserSettingLayout">

                <TextView
                    style="@style/UserSettingLayoutItem"
                    android:drawableStart="@drawable/ic_sidebar_about"
                    android:text="@string/about" />
            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
